k8s/base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecom-api
spec:
  selector:
    app: ecom-api
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ecom-frontend
spec:
  type: NodePort
  selector:
    app: ecom-frontend
  ports:
    - port: 80
      targetPort: 80
